chore: rename platform to channel
